--- a/bonus-assignment-05.ipynb
+++ b/bonus-assignment-05.ipynb
@@ -323,9 +323,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: nbformat in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (5.9.2)\n",
+      "Requirement already satisfied: fastjsonschema in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from nbformat) (2.18.0)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from nbformat) (4.19.1)\n",
+      "Requirement already satisfied: jupyter-core in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from nbformat) (5.3.1)\n",
+      "Requirement already satisfied: traitlets>=5.1 in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from nbformat) (5.10.0)\n",
+      "Requirement already satisfied: attrs>=22.2.0 in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from jsonschema>=2.6->nbformat) (23.1.0)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from jsonschema>=2.6->nbformat) (2023.7.1)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from jsonschema>=2.6->nbformat) (0.30.2)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from jsonschema>=2.6->nbformat) (0.10.3)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from jupyter-core->nbformat) (3.10.0)\n",
+      "Requirement already satisfied: pywin32>=300 in c:\\users\\tomas\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from jupyter-core->nbformat) (306)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install --upgrade nbformat"
    ]
@@ -351,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +381,7 @@
        },
        "data": [
         {
-         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Queens<br>precip_24_hr_in=%{x}<br>Pickups=%{y}<extra></extra>",
+         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Queens<br>24-hour Precipitation=%{x}<br>Pickups=%{y}<extra></extra>",
          "hovertext": [
           "Queens",
           "Queens",
@@ -4924,7 +4943,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Manhattan<br>precip_24_hr_in=%{x}<br>Pickups=%{y}<extra></extra>",
+         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Manhattan<br>24-hour Precipitation=%{x}<br>Pickups=%{y}<extra></extra>",
          "hovertext": [
           "Manhattan",
           "Manhattan",
@@ -9432,7 +9451,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Staten Island<br>precip_24_hr_in=%{x}<br>Pickups=%{y}<extra></extra>",
+         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Staten Island<br>24-hour Precipitation=%{x}<br>Pickups=%{y}<extra></extra>",
          "hovertext": [
           "Staten Island",
           "Staten Island",
@@ -13970,7 +13989,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Brooklyn<br>precip_24_hr_in=%{x}<br>Pickups=%{y}<extra></extra>",
+         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Brooklyn<br>24-hour Precipitation=%{x}<br>Pickups=%{y}<extra></extra>",
          "hovertext": [
           "Brooklyn",
           "Brooklyn",
@@ -18370,7 +18389,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=EWR<br>precip_24_hr_in=%{x}<br>Pickups=%{y}<extra></extra>",
+         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=EWR<br>24-hour Precipitation=%{x}<br>Pickups=%{y}<extra></extra>",
          "hovertext": [
           "EWR",
           "EWR",
@@ -22902,7 +22921,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Unknown<br>precip_24_hr_in=%{x}<br>Pickups=%{y}<extra></extra>",
+         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Unknown<br>24-hour Precipitation=%{x}<br>Pickups=%{y}<extra></extra>",
          "hovertext": [
           "Unknown",
           "Unknown",
@@ -25973,7 +25992,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Bronx<br>precip_24_hr_in=%{x}<br>Pickups=%{y}<extra></extra>",
+         "hovertemplate": "<b>%{hovertext}</b><br><br>borough=Bronx<br>24-hour Precipitation=%{x}<br>Pickups=%{y}<extra></extra>",
          "hovertext": [
           "Bronx",
           "Bronx",
@@ -31335,7 +31354,7 @@
           1
          ],
          "title": {
-          "text": "precip_24_hr_in"
+          "text": "24-hour Precipitation"
          }
         },
         "yaxis": {
@@ -31357,6 +31376,7 @@
    ],
    "source": [
     "\n",
+    "\n",
     "# Merge the Uber_pickups, Uber_boroughs, and Uber_weather DataFrames\n",
     "merged_data = pd.merge(Uber_pickups, Uber_boroughs, left_on='borough_id', right_on='id')\n",
     "merged_data = pd.merge(merged_data, Uber_weather, left_on=['pickup_dt', 'borough_id'], right_on=['datetime', 'borough_id'])\n",
@@ -31364,11 +31384,10 @@
     "# Create a scatter plot using Plotly Express to visualize the relationship\n",
     "Part8 = px.scatter(merged_data, x='precip_24_hr_in', y='pickups', color='borough',\n",
     "                 title='Impacts of 24-Hour Precipitation (inches) on Pickups by Borough',\n",
-    "                 labels={'weather_factor_column': 'Weather Factor', 'pickups': 'Pickups'},\n",
+    "                 labels={'precip_24_hr_in': '24-hour Precipitation', 'pickups': 'Pickups'},\n",
     "                 hover_name='borough')\n",
     "\n",
     "Part8\n",
-    "\n",
     "\n",
     "\n",
     "\n"
@@ -31385,7 +31404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31405,7 +31424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
